**v1.0.86**
- change live now to track for multiple live platforms
- more changes to support multiple live platforms
- update giphy to use shared embed call
- update result of tracked live to return list
- Change embed to allow null for message / title
- Added birthday wishes [wip]
- fix language file

**v1.0.72**
- fixed call to add twitch user info
- fix issue with live_now
- rework live_now to support youtube.
- fixed the stopped streaming check in live now
- Add track of when a user starts and ends stream
- refactor the live_now to look at all activities
- Update commands with "guild_only" decorators
- fix issue when asking text where it would fail.
- Fix reason string for invite.
- fix typo in stream team module.
- fix stream team join request log title.
- added image and thumbnail option for embeds
- updated default footer text
- add a live-now watch to move to live role
- live now also tracks their twitch name, if available.
- fix call to handle twitch/youtube live
- fixed the default footer for some instances
- fix the call to embed with an image
- fix twitch emoji in live message
- fix emoji find call

**v1.0.53**
- Update stream team module with localized strings
- Update trivia module with localized strings
- Added unified `.taco <group> help` command that directs to the correct help command.
- Added `.taco gif [search]` that will return a `taco gif` by default.
- Added more locialized strings to replace hard coded strings
- Update restricted module to use localized strings.
- removed unused carlgg suggestion module
- updated help module to use localized strings.
- updated tacos module to use localized strings.
- fixed the log of the receiving of tacos to be the correct user.
- fixed the taco log message key name
- fixed the changelog to separate and group correctly.
- Started using localized strings. Starting with english.
- Start adding strings to load from localization files.
- Fixed issue with the 🌮 reaction
- implement `.taco changelog` command